--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Title</title>
 </head>
 <body>
+<header class="header">
+    <header class="container">
+        <div class="logo">
+
+            <span class="logo-car">car</span>
+            <span class="logo-sharing">sharing</span>
+        </div>
+    </header>
 
 </body>
 </html>
